delete obsolete courses info club page

--- a/src/app/club/club.component.html
+++ b/src/app/club/club.component.html
@@ -21,15 +21,7 @@
         
         En avril, notre premier bal CD fut une belle réussite. Au dernier trimestre, nous avons créé un cours de danse Partner « couple ». Nous avons terminé la saison avec 39 adhérents.<br /><br />
 
-        Pour cette nouvelle saison qui débute, une nouvelle organisation des cours et des animateurs : nous avons décalé le cours des mediums au jeudi soir et réduit le cours des débutants à une heure afin de pouvoir ajouter un créneau pour les danses de niveau intermédiaire le mercredi soir. Une fois par mois, ce cours sera remplacé par les danses en couple. Nous avons également ajouté un créneau de révision le mercredi pour se mettre en jambe pour les soirées et les démo !<br /><br />
-
-        Mercredi : <br />
-        Un cours médium assuré par Martine et Nathalie<br />
-        Un cours Novice ou intermédiaire assuré par Martine<br /><br />
-
-        Jeudi :<br />
-        Un cours débutant assuré par Nathalie<br />
-        Un cours Partner assuré par Louis aidé de Pierrette
+        Pour cette nouvelle saison qui débute, une nouvelle organisation des cours et des animateurs : nous avons décalé le cours des mediums au jeudi soir et réduit le cours des débutants à une heure afin de pouvoir ajouter un créneau pour les danses de niveau intermédiaire le mercredi soir. Une fois par mois, ce cours sera remplacé par les danses en couple. Nous avons également ajouté un créneau de révision le mercredi pour se mettre en jambe pour les soirées et les démo !
     </section>
     <section>
         <h2>Bureau du club</h2>
