--- a/src/app/cours/cours.component.html
+++ b/src/app/cours/cours.component.html
@@ -36,12 +36,12 @@
                 </p>
                 <p>
                     <strong>Cours niveau novice</strong>
-                    Les mercredis à 19h00 (1h00)<br />
+                    Les mercredis à 18h45 (1h00)<br />
                     Avec Martine
                 </p>
                 <p>
                     <strong>Cours niveau intermédiaire</strong>
-                    Les mercredis à 20h15 (1h)
+                    Les mercredis à 20h00 (1h00)
                     Avec Martine
                 </p>
                 <p>
