--- a/src/app/evenements-club/evenements-club.component.html
+++ b/src/app/evenements-club/evenements-club.component.html
@@ -4,7 +4,7 @@
         <h2>Evenements du club</h2>
         <div class="illu"></div>
     </div>
-    <mat-accordion [multi]="true">
+    <!--<mat-accordion [multi]="true">
         <mat-expansion-panel>
             <mat-expansion-panel-header>
                 Octobre 2024
@@ -13,5 +13,6 @@
                 <app-activities-card *ngFor="let activity of activitiesCard" [activitiesCard]="activity"></app-activities-card>
             </div>
         </mat-expansion-panel>
-    </mat-accordion>
+    </mat-accordion>-->
+    <h4>Aucun événement à venir</h4>
 </section>
