--- a/src/app/club/club.component.html
+++ b/src/app/club/club.component.html
@@ -30,7 +30,10 @@
             <img src="/assets/img/club-photos/Frédéric.png" alt="vice président">
             <img src="/assets/img/club-photos/Joëlle.png" alt="trésorière">
             <img src="/assets/img/club-photos/Martine.png" alt="trésorière adjointe">
-            <img src="/assets/img/club-photos/Nathalie.png" alt="secrétaire adjointe">
+            <img src="/assets/img/club-photos/NathalieD.png" alt="secrétaire adjointe">
+            <img src="/assets/img/club-photos/Pierrette.png" alt="membre">
+            <img src="/assets/img/club-photos/NathalieV.png" alt="membre">
+            <img src="/assets/img/club-photos/Cathy.png" alt="membre">
         </div>
     </section>
 </div>
