--- a/src/app/evenements-club/evenements-club.component.html
+++ b/src/app/evenements-club/evenements-club.component.html
@@ -4,15 +4,15 @@
         <h2>Evenements du club</h2>
         <div class="illu"></div>
     </div>
-    <!--<mat-accordion [multi]="true">
-        <mat-expansion-panel>
+    <mat-accordion [multi]="true">
+        <mat-expansion-panel [expanded]="true">
             <mat-expansion-panel-header>
-                Octobre 2024
+                Septembre 2025
             </mat-expansion-panel-header>
             <div class="event-content">
                 <app-activities-card *ngFor="let activity of activitiesCard" [activitiesCard]="activity"></app-activities-card>
             </div>
         </mat-expansion-panel>
-    </mat-accordion>-->
-    <h4>Aucun événement à venir</h4>
+    </mat-accordion>
+    <!--<h4>Aucun événement à venir</h4>-->
 </section>
