--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,17 +4,26 @@
     <section class="mot-president">      
         <p>“ 
             Notre association « loi 1901 », Country Saloon 82, créée en 2018, a pour objet la promotion, la pratique, l’enseignement et le développement de la danse et de la musique dites Country-Western, ainsi que toutes activités accessoires et connexes.<br><br>
+
             Très vite est venu le partage de la musique country avec de nouveaux membres pour apprendre la
             danse, une équipe de présentation s’est façonnée, qui aujourd’hui est heureuse de présenter sa passion, lors de différentes manifestations.<br><br>
+
             Un groupe où règne la joie du partage d’une passion pour la danse en ligne country, 5 ans de vie de l’association qui compte 39 membres.<br><br>
-            Un mercredi par mois à la place du cours Intermédiaire nous nous retrouvons pour l’apprentissage des danses Partner «couple» commencées en cours d’année dernière. Sur tous les autres cours, nous découvrons de belles chorégraphies en ligne avec des musiques qui nous rassemblent et nous détendent.<br><br>
+
+            Les horaires et choix des cours ont évolués en présentent :<br>
+            Débutant et médium le jeudi<br>
+            Révision, Novice et intermédiaire le mercredi<br>
+            Partner le lundi<br><br>
+
             Aujourd’hui nous vous présentons un site internet, pour faire profiter au plus grand nombre la vie de notre passion. C’est avec fierté mais humilité que je Préside cette association de bénévoles qui s’investissent tout au long de l’année, merci à tous pour cet engagement et fidélité.<br><br>
-            Pour la rentrée 2024/2025, soit le 11 septembre, une nouvelle organisation avec de <b><u>nouveaux horaires</u></b>. Des soirées dansantes sont programmées au fil du temps.<br><br>
+
+            Pour la rentrée 2025/2026, nous vous concoctons notre 1 er Festival Américain les 26, 27 et 28 septembre 2025. Des soirées dansantes sont programmées au fil du temps. Nous avons aussi un groupe pour des démonstrations de danse country que nous présentons dans diverses manifestations.<br><br>
+
             Je ne peux que vous inviter à nous rejoindre, pour partager cette passion qui est la Musique et la danse Country. Nous présenterons des danses lors de la <b><u>fête des associations</u></b> le 8 septembre prochain.<br><br>
             Bien amicalement à toutes et tous, à très bientôt. 
             “<br>
         <em>- Louis Chevilley, président du club</em></p>
-        <img src="/assets/img/president-photo.JPG" alt="photo du président du club">
+        <img src="/assets/img/president-photo.jpg" alt="photo du président du club">
     </section>
     <section class="en-bref">
         <h3>Country Saloon 82 en bref</h3>
