--- a/src/app/happy-new-year/happy-new-year.component.scss
+++ b/src/app/happy-new-year/happy-new-year.component.scss
@@ -9,6 +9,10 @@
     padding: 40px;
     background-color: rgba(0, 0, 0, 0.8);
 
+    a {
+        width: 80%;
+    }
+
     img {
         max-width: 100%;
         max-height: 100%;
