--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -15,6 +15,7 @@
             width: 140px;
             height: 140px;
             border-radius: 50%;
+            object-fit: cover;
         }
 
         p {
