modif mot president

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -19,7 +19,7 @@
 
             Pour la rentrée 2025/2026, nous vous concoctons notre 1 er Festival Américain les 26, 27 et 28 septembre 2025. Des soirées dansantes sont programmées au fil du temps. Nous avons aussi un groupe pour des démonstrations de danse country que nous présentons dans diverses manifestations.<br><br>
 
-            Je ne peux que vous inviter à nous rejoindre, pour partager cette passion qui est la Musique et la danse Country. Nous présenterons des danses lors de la <b><u>fête des associations</u></b> le 8 septembre prochain.<br><br>
+            Je ne peux que vous inviter à nous rejoindre, pour partager cette passion qui est la Musique et la danse Country. Nous présenterons des danses lors des prochains <b><u>marchés gourmands</u></b>, entre juin et août.<br><br>
             Bien amicalement à toutes et tous, à très bientôt. 
             “<br>
         <em>- Louis Chevilley, président du club</em></p>
