modit img event

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -22,7 +22,7 @@
             Je ne peux que vous inviter à nous rejoindre, pour partager cette passion qui est la Musique et la danse Country. Nous présenterons des danses lors des prochains <b><u>marchés gourmands</u></b>, entre juin et août.<br><br>
             Bien amicalement à toutes et tous, à très bientôt. 
             “<br>
-        <em>- Louis Chevilley, président du club</em></p>
+        <em>Louis Chevilley, président du club</em></p>
         <img src="/assets/img/president-photo.jpg" alt="photo du président du club">
     </section>
     <section class="en-bref">
