--- a/src/app/activitiesCard/activitiesCard.component.scss
+++ b/src/app/activitiesCard/activitiesCard.component.scss
@@ -18,6 +18,7 @@
             width: 100%;
             height: 100%;
             object-fit: cover;
+            object-position: 50% 37%;
             transition: .5s;
         }
     }
