--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -31,7 +31,7 @@
                 Country Saloon 82
             </h1>
             <h2>
-                Club de danse Country à St-Étienne-de-Tulmont
+                Club de danse Country - 82410 St-Étienne-de-Tulmont
             </h2>
         </div>
     </div>
