add info festival

--- a/src/app/festival-sept/festival-sept.component.html
+++ b/src/app/festival-sept/festival-sept.component.html
@@ -4,7 +4,7 @@
         <h2>Festival americain</h2>
         <h3>Vendredi 26, samedi 27 et dimanche 28 Septembre 2025<br />
         <em>à Saint-Etienne-de-Tulmont</em></h3>
-        <!--<a class="btn secondary" target="_blank" href="/assets/docs/soiree2829Oct23.pdf">Télécharger le programme</a>-->
+        <a class="btn secondary" target="_blank" href="/assets/docs/soiree2829Oct23.pdf">Télécharger le flyer</a>
     </div>
     <p>
         Nous vous proposons, sur 3 jours, <strong>le 1er Festival Américain du Tarn et Garonne, les 26,27 et 28 septembre prochain</strong>.<br />
@@ -12,8 +12,22 @@
         
         Ne manquez donc pas ce moment inédit qui sera, nous en sommes certains, un condensé de musique, de bonne humeur et de partage !!<br /><br />
     </p>
-    <div class="event-content">
+
+<h3>Vous avez besoin d'un hébergement ??</h3>
+<p class="hebergement">Contactez directement nos partenaires pour un tarif préférentiel :<br /><br />
+
+    Hôtel : <a target="_blank" href="https://all.accor.com/hotel/7950/index.fr.shtml?utm_campaign=seo+maps&utm_medium=seo+maps&utm_source=google+Maps">IBIS Montauban</a> (code : Country825)<br />
+    Chambres d'hôtes : <a target="_blank" href="https://www.parcdecoulassy.com/">Parc de Coulassy</a> - <a target="_blank" href="https://www.chambres-hotes.fr/chambres-hotes_chambres-d-hotes-lo-temps-d-una-pausa_negrepelisse_71222.htm">Lo Temps d'una pausa</a> - <a target="_blank" href="https://www.lacorraliere.fr/">La Corralière</a></p>
+
+    <h3>Réservation :</h3>
+    <p class="resa">
+        <a class="btn" target="_blank" href="https://www.helloasso.com/associations/country-saloon-82/evenements/festival-americain">En ligne</a>
+        <a class="btn secondary" target="_blank" href="/assets/docs/reservation-festival-septembre.pdf">Par courrier</a>
+    </p>
+
+    <div class="event-content">        
         <img src="/assets/img/events-img/festivalSept25.png" alt="festival du 26 au 28 septembre 2025" />
         <img src="/assets/img/events-img/festivalSept25Prog.png" alt="festival du 26 au 28 septembre 2025 programme" />
+        <img src="/assets/img/events-img/planFlyer.png" alt="plan flyer festival" />
     </div>
 </section>
