edit infos courses + adhesion

--- a/src/app/cours/cours.component.html
+++ b/src/app/cours/cours.component.html
@@ -9,6 +9,7 @@
         <div class="infos-cours">
             <div class="salle-zawislack">
                 <div>
+                    <h2>Salle Zawislack</h2><br />
                     <p>
                         <strong>Cours niveau débutant</strong>
                         Les jeudis à 18h45 (1h00)<br />
@@ -18,9 +19,16 @@
                         <strong>Cours niveau medium</strong>
                         Les jeudis à 20h00 (1h00)<br />
                         Avec Nathalie
-                    </p>
+                    </p><br />
+
+                    <h2>Salle des Ainés</h2><br />
+                    <p>
+                    <strong>Cours "partner"</strong>
+                    Les lundis à 20h00 (1h00)
+                    Avec Pierrette et Louis
+                </p>
                 </div>
-                <p>
+                <p><br />
                     Salle Zawislack, en face de la mairie de Saint-Etienne de Tulmont<br />
                     6 Rue de la Poste, 82410 Saint-Etienne-de-Tulmont
                     <img class="map" src="/assets/img/salle-zawislack-map.png" alt="Plan salle Zawislack" />
@@ -29,31 +37,21 @@
             </div>
             <div class="salle-fetes">
                 <div>
+                    <h2>Sale des fêtes</h2><br />
                 <p>
-<<<<<<< HEAD
-                    <strong>Cours niveau medium</strong>
-                    Les mercredis à 18h45 (1h00)<br />
-                    Avec Martine et Nathalie
-=======
-                    <strong>Cours "révision"</strong>
+                    <strong>Cours "révisions"</strong>
                     Les mercredis à 17h45 (1h00)<br />
-                    Avec Nathalie, Martine et Louis
->>>>>>> develop
+                    Avec tous les animateurs
                 </p>
                 <p>
                     <strong>Cours niveau novice</strong>
-                    Les mercredis à 18h45 (1h00)<br />
+                    Les mercredis à 19h00 (1h00)<br />
                     Avec Martine
                 </p>
                 <p>
                     <strong>Cours niveau intermédiaire</strong>
-                    Les mercredis à 20h00 (1h00)
+                    Les mercredis à 20h15 (1h00)
                     Avec Martine
-                </p>
-                <p>
-                    <strong>Cours "partner"</strong>
-                    Un mercredi par mois (remplace le cours de niveau intermédiaire)
-                    Avec Pierrette et Louis
                 </p>
                 </div>
                 <p>
@@ -64,5 +62,11 @@
                 </p>
             </div>
         </div>
+        <p class="salle-aines">
+                    Salle des Ainés<br />
+                    Rue des sports, 82410 Saint-Etienne-de-Tulmont<br />
+                    <img class="map" src="/assets/img/salle-aines-map.jpg" alt="Plan salle des ainés" />
+                    <img class="map" src="/assets/img/salle-aines.jpg" alt="Salle des ainés" />
+                </p>
     </div>
 </div>
