--- a/src/app/cours/cours.component.scss
+++ b/src/app/cours/cours.component.scss
@@ -37,6 +37,16 @@
         justify-content: space-between;
         margin: 50px 0 80px 0;
 
+        .salle-aines {
+            margin-top: 20px;
+            
+            img {
+                width: 50%;
+                height: 320px;
+                object-fit: cover;
+            }
+        }
+
         .infos-cours {
             display: flex;
             justify-content: space-between;
