--- a/src/app/cours/cours.component.html
+++ b/src/app/cours/cours.component.html
@@ -2,7 +2,7 @@
 <div class="container-cours">
     <div class="head">
         <h2>Les cours</h2>
-        <p><strong>Adhésion annuelle :</strong> 50€</p>
+        <p><strong>Adhésion annuelle :</strong> 60€</p>
         <a target="_blank" href="/assets/docs/fiche-adhésion.pdf" class="btn secondary">Télécharger la fiche d'adhésion</a>
     </div>
     <div class="body">
@@ -24,7 +24,7 @@
                     <h2>Salle des Ainés</h2><br />
                     <p>
                     <strong>Cours "partner"</strong>
-                    Les lundis à 20h00 (1h00)
+                    Les lundis à 20h00 (1h00)<br />
                     Avec Pierrette et Louis
                 </p>
                 </div>
@@ -37,7 +37,7 @@
             </div>
             <div class="salle-fetes">
                 <div>
-                    <h2>Sale des fêtes</h2><br />
+                    <h2>Salle des fêtes</h2><br />
                 <p>
                     <strong>Cours "révisions"</strong>
                     Les mercredis à 17h45 (1h00)<br />
@@ -50,7 +50,7 @@
                 </p>
                 <p>
                     <strong>Cours niveau intermédiaire</strong>
-                    Les mercredis à 20h15 (1h00)
+                    Les mercredis à 20h15 (1h00)<br />
                     Avec Martine
                 </p>
                 </div>
@@ -63,9 +63,9 @@
             </div>
         </div>
         <p class="salle-aines">
-                    Salle des Ainés<br />
-                    Rue des sports, 82410 Saint-Etienne-de-Tulmont<br />
-                    <img class="map" src="/assets/img/salle-aines-map.jpg" alt="Plan salle des ainés" />
+                    Salle des Ainés,<br />
+                    8 rue de la Mairie, 82410 Saint-Etienne-de-Tulmont<br />
+                    <img class="map" src="/assets/img/salle-aines-map.png" alt="Plan salle des ainés" />
                     <img class="map" src="/assets/img/salle-aines.jpg" alt="Salle des ainés" />
                 </p>
     </div>
