--- a/src/app/cours/cours.component.html
+++ b/src/app/cours/cours.component.html
@@ -13,19 +13,19 @@
                     <p>
                         <strong>Cours niveau débutant</strong>
                         Les jeudis à 18h45 (1h00)<br />
-                        Avec Nathalie
+                        Avec <em>Nathalie</em>
                     </p>
                     <p>
                         <strong>Cours niveau medium</strong>
                         Les jeudis à 20h00 (1h00)<br />
-                        Avec Nathalie
+                        Avec <em>Nathalie</em>
                     </p><br />
 
                     <h2>Salle des Ainés</h2><br />
                     <p>
                     <strong>Cours "partner"</strong>
                     Les lundis à 20h00 (1h00)<br />
-                    Avec Pierrette et Louis
+                    Avec <em>Pierrette et Louis</em>
                 </p>
                 </div>
                 <p><br />
@@ -41,17 +41,17 @@
                 <p>
                     <strong>Cours "révisions"</strong>
                     Les mercredis à 17h45 (1h00)<br />
-                    Avec tous les animateurs
+                    Avec <em>tous les animateurs</em>
                 </p>
                 <p>
                     <strong>Cours niveau novice</strong>
                     Les mercredis à 19h00 (1h00)<br />
-                    Avec Martine
+                    Avec <em>Martine </em>
                 </p>
                 <p>
                     <strong>Cours niveau intermédiaire</strong>
                     Les mercredis à 20h15 (1h00)<br />
-                    Avec Martine
+                    Avec <em>Martine</em>
                 </p>
                 </div>
                 <p>
@@ -64,7 +64,7 @@
         </div>
         <p class="salle-aines">
                     Salle des Ainés,<br />
-                    8 rue de la Mairie, 82410 Saint-Etienne-de-Tulmont<br />
+                    20 rue de la Mairie, 82410 Saint-Etienne-de-Tulmont<br />
                     <img class="map" src="/assets/img/salle-aines-map.png" alt="Plan salle des ainés" />
                     <img class="map" src="/assets/img/salle-aines.jpg" alt="Salle des ainés" />
                 </p>
