feat: change events

--- a/src/app/evenements-club/evenements-club.component.html
+++ b/src/app/evenements-club/evenements-club.component.html
@@ -7,7 +7,7 @@
     <mat-accordion [multi]="true">
         <mat-expansion-panel [expanded]="true">
             <mat-expansion-panel-header>
-                Septembre 2025
+                Février 2026
             </mat-expansion-panel-header>
             <div class="event-content">
                 <app-activities-card *ngFor="let activity of activitiesCard" [activitiesCard]="activity"></app-activities-card>
