--- a/src/app/festival-sept/festival-sept.component.html
+++ b/src/app/festival-sept/festival-sept.component.html
@@ -1,33 +1,6 @@
 <app-nav></app-nav>
 <section class="event-container">
-    <div class="head">
-        <h2>Festival americain</h2>
-        <h3>Vendredi 26, samedi 27 et dimanche 28 Septembre 2025<br />
-        <em>à Saint-Etienne-de-Tulmont</em></h3>
-        <a class="btn secondary" target="_blank" href="/assets/docs/flyer-festival-septembre.pdf">Télécharger le flyer</a>
-    </div>
-    <p>
-        Nous vous proposons, sur 3 jours, <strong>le 1er Festival Américain du Tarn et Garonne, les 26,27 et 28 septembre prochain</strong>.<br />
-        Celui-ci se tiendra aux abords de la salle des Fêtes et nous comptons sur vous pour venir nous rendre visite et profiter de toutes les animations que nous sommes en train de vous concocter !!<br /><br />
-        
-        Ne manquez donc pas ce moment inédit qui sera, nous en sommes certains, un condensé de musique, de bonne humeur et de partage !!<br /><br />
-    </p>
-
-<h3>Vous avez besoin d'un hébergement ??</h3>
-<p class="hebergement">Contactez directement nos partenaires pour un tarif préférentiel :<br /><br />
-
-    Hôtel : <a target="_blank" href="https://all.accor.com/hotel/7950/index.fr.shtml?utm_campaign=seo+maps&utm_medium=seo+maps&utm_source=google+Maps">IBIS Montauban</a> (code : Country825)<br />
-    Chambres d'hôtes : <a target="_blank" href="https://www.parcdecoulassy.com/">Parc de Coulassy</a> - <a target="_blank" href="https://www.chambres-hotes.fr/chambres-hotes_chambres-d-hotes-lo-temps-d-una-pausa_negrepelisse_71222.htm">Lo Temps d'una pausa</a> - <a target="_blank" href="https://www.lacorraliere.fr/">La Corralière</a></p>
-
-    <h3>Réservation :</h3>
-    <p class="resa">
-        <a class="btn" target="_blank" href="https://www.helloasso.com/associations/country-saloon-82/evenements/festival-americain">En ligne</a>
-        <a class="btn secondary" target="_blank" href="/assets/docs/reservation-festival-septembre.pdf">Par courrier</a>
-    </p>
-
     <div class="event-content">        
-        <img src="/assets/img/events-img/festivalSept25.png" alt="festival du 26 au 28 septembre 2025" />
-        <img src="/assets/img/events-img/festivalSept25Prog.png" alt="festival du 26 au 28 septembre 2025 programme" />
-        <img src="/assets/img/events-img/planFlyer.png" alt="plan flyer festival" />
+        <img src="/assets/img/events-img/ConcertBalCountryV3flyer.png" alt="flyer soiree" />
     </div>
 </section>
