--- a/src/app/happy-new-year/happy-new-year.component.html
+++ b/src/app/happy-new-year/happy-new-year.component.html
@@ -1,4 +1,4 @@
 <div class="container-happy-new-year" [class.pop-up-closed]="!isCardFullscreen">
     <span [class.close-pop-up]="isCardFullscreen" class="material-symbols-sharp close" (click)="popUpCard()"> close </span>
-    <a routerLink="/26-27-28-septembre-2025-st-etienne-de-tulmont"><img src="/assets/img/events-img/popupfestival25.png" alt="Festival américain" /></a>
+    <img src="/assets/img/events-img/ConcertBalCountryV3.png" alt="Concert Bal Country 2025" />
 </div>
